--- a/internal/templates/home.templ
+++ b/internal/templates/home.templ
@@ -1,8 +1,8 @@
-
 package templates
 
-templ Home(){
-    <div>
+templ Home() {
+    @Base("Home") {
         <h1>Home</h1>
-    </div>
+        <p>Welcome to the home page</p>
+    }
 }
